--- a/index.html
+++ b/index.html
@@ -7,173 +7,21 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Header -->
-    <header>
-      <div class="container">
-        <div class="logo">
-          <img src="images/logo.svg" alt="Atípiko Brands Logo" />
-        </div>
-        <nav>
-          <ul class="nav-links">
-            <li><a href="#about">About Us</a></li>
-            <li><a href="#work">Our Work</a></li>
-          </ul>
-          <div class="hidemenu">
-            <ul class="links">
-              <li><a href="#about">About Us</a></li>
-              <li><a href="#work">Our Work</a></li>
-              <li><a href="#work">Services</a></li>
-              <li><a href="#work">Contact Us</a></li>
-            </ul>
-          </div>
-          <div class="menu-icon" onclick="toggleMenu()">
-            <span></span>
-            <span></span>
-          </div>
-        </nav>
-      </div>
-    </header>
+
 
     <!-- Hero Section -->
-    <section class="begginer">
+    <section class="blocker">
       <div class="container">
+        <div class="b-header">
+          <h1>Titulo com H1</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, ducimus fugiat nesciunt deserunt cum dicta!</p>
+        </div>
         <div class="b-content">
-          <div class="title">
-            <h1>Um studio Design.</h1>
-          </div>
-          <div class="text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
-          </div>
+          
         </div>
       </div>
     </section>
 
-    <section class="banner cover-image">
-      <img src="images/studio.jpeg" alt="">
-    </section>
-
-    <!-- Work Section -->
-    <section id="work" class="work">
-      <div class="container">
-        <div class="work-head">
-          <h2>Works recently</h2>
-          <a href="#">See all work</a>
-        </div>
-        <div class="work-grid">
-
-          <div class="work-item cover-image">
-            <img
-              src="images/studio.jpeg"
-              alt=""
-            />
-            <div class="item-content">
-              <h3>Gogerir</h3>
-              <p>Brand Identity</p>
-            </div>
-          </div>
-          <div class="work-item cover-image">
-            <img
-              src="images/studio.jpeg"
-              alt=""
-            />
-            <div class="item-content">
-              <h3>Gogerir</h3>
-              <p>Brand Identity</p>
-            </div>
-          </div>
-          <div class="work-item cover-image">
-            <img
-              src="images/studio.jpeg"
-              alt=""
-            />
-            <div class="item-content">
-              <h3>Gogerir</h3>
-              <p>Brand Identity</p>
-            </div>
-          </div>
-
-
-        </div>
-      </div>
-    </section>
-
-    <section class="services">
-      <div class="container">
-        <div class="s-content">
-          <div class="services-head">
-            <h2>What we do.</h2>
-            <a href="#">See all work</a>
-          </div>
-          <div class="s-services">
-            <div class="s-item">
-              <div class="title">
-                <h3>Identidade visual</h3>
-              </div>
-              <div class="content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam  </p>
-              </div>
-            </div>
-            <div class="s-item">
-              <div class="title">
-                <h3>Design de embalagem</h3>
-              </div>
-              <div class="content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam  </p>
-              </div>
-            </div>
-            <div class="s-item">
-              <div class="title">
-                <h3>Design Web e Aplicativo</h3>
-              </div>
-              <div class="content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam  </p>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section>
-
-    <footer>
-      <div class="container">
-        <div class="f-content">
-          <div class="f-logo">
-            <img src="images/logo.svg" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
-          </div>
-          <div class="f-local">
-            <h3>Locations</h3>
-            <p>Av. Francisco Manyanga
-              Cidade de Nampula, MZ</p>
-            <p>Av. Francisco Manyanga
-              Cidade de Nampula, MZ</p>
-          </div>
-          <div class="f-contacto">
-            <h3>Conatctos</h3>
-            <ul>
-              <li><a href="#">design@atipikobrands.com</a></li>
-              <li><a href="#">team@atipikobrands.com</a></li>
-              <li><a href="#">(+258) 84686 0296</a></li>
-              <li><a href="#">(+258) 84686 0296</a></li>
-            </ul>
-          </div>
-          <div class="f-social">
-            <h3>Follow</h3>
-            <ul>
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">LinkedIn</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="copyright">
-        <p>© 2025 Atípiko Brands developed by Atípiko Brands</p>
-      </div>
-    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
