Fineshed first block

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Atípiko Brands</title>
+    <title>The Blocker</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -16,9 +16,9 @@
           <h1>Titulo com H1</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, ducimus fugiat nesciunt deserunt cum dicta!</p>
         </div>
-        <div class="b-content">
-          
-        </div>
+        <div class="b-content cover-image">
+          <img src="images/studio.jpeg" alt="">
+        </div> 
       </div>
     </section>
 
