--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
       </div>
     </section>
 
+    <section class="blocker">
+      <div class="container">
+        <div class="b-header">
+          <h1>About project</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, ducimus fugiat nesciunt deserunt cum dicta!</p>
+        </div>
+      </div>
+    </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
