--- a/index.html
+++ b/index.html
@@ -22,11 +22,26 @@
       </div>
     </section>
 
-    <section class="blocker">
+    <section class="info">
       <div class="container">
-        <div class="b-header">
+        <div class="i-header">
           <h1>About project</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, ducimus fugiat nesciunt deserunt cum dicta!</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime numquam cumque assumenda recusandae adipisci eaque suscipit fugit consequatur perspiciatis rem fugiat, facilis dolorum reprehenderit? Quibusdam, ex? Reiciendis maiores, tempore doloremque iure dignissimos debitis quibusdam quia nulla quae libero asperiores et modi porro odio! Quibusdam eveniet commodi ullam! Doloribus eligendi eaque libero vel maxime quia in.</p>
+        </div>
+
+        <div class="i-tags">
+          <div class="item-tag">
+            <h3>Company</h3>
+            <p>Name of compy</p>
+          </div>
+          <div class="item-tag">
+            <h3>Company</h3>
+            <p>Name of compy</p>
+          </div>
+          <div class="item-tag">
+            <h3>Company</h3>
+            <p>Name of compy</p>
+          </div>
         </div>
       </div>
     </section>
