--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
       </div>
     </section>
 
+    <section class="projects">
+      <div class="container">
+        <div class="p-item cover-image">
+
+        </div>
+      </div>
+
+    </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
