--- a/index.html
+++ b/index.html
@@ -49,6 +49,32 @@
     <section class="projects">
       <div class="container">
         <div class="p-item cover-image">
+          <img src="images/studio.jpeg" alt="">
+        </div>
+        <div class="p-item cover-image">
+          <img src="images/studio.jpeg" alt="">
+        </div>
+        <div class="p-item cover-image">
+          <img src="images/studio.jpeg" alt="">
+        </div>
+        <div class="p-item cover-image">
+          <img src="images/studio.jpeg" alt="">
+        </div>
+      </div>
+    </section>
+
+    <section class="projects-similar">
+      <div class="container">
+        <div class="ps-content">
+          <div class="ps-item cover-image">
+            <img src="images/studio.jpeg" alt="">
+          </div>
+          <div class="ps-item cover-image">
+            <img src="images/studio.jpeg" alt="">
+          </div>
+          <div class="ps-item cover-image">
+            <img src="images/studio.jpeg" alt="">
+          </div>
 
         </div>
       </div>
