--- a/index.html
+++ b/index.html
@@ -66,14 +66,41 @@
     <section class="projects-similar">
       <div class="container">
         <div class="ps-content">
-          <div class="ps-item cover-image">
-            <img src="images/studio.jpeg" alt="">
-          </div>
-          <div class="ps-item cover-image">
-            <img src="images/studio.jpeg" alt="">
-          </div>
-          <div class="ps-item cover-image">
-            <img src="images/studio.jpeg" alt="">
+          <h2>Projectos Similares</h2>
+          <div class="ps-grid">
+
+            <div class="work-item cover-image">
+              <img
+                src="images/studio.jpeg"
+                alt=""
+              />
+              <div class="item-content">
+                <h3>Gogerir</h3>
+                <p>Brand Identity</p>
+              </div>
+            </div>
+            <div class="work-item cover-image">
+              <img
+                src="images/studio.jpeg"
+                alt=""
+              />
+              <div class="item-content">
+                <h3>Gogerir</h3>
+                <p>Brand Identity</p>
+              </div>
+            </div>
+            <div class="work-item cover-image">
+              <img
+                src="images/studio.jpeg"
+                alt=""
+              />
+              <div class="item-content">
+                <h3>Gogerir</h3>
+                <p>Brand Identity</p>
+              </div>
+            </div>
+  
+
           </div>
 
         </div>
