--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       <div class="container">
         <div class="b-header">
           <h1>Titulo com H1</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, ducimus fugiat nesciunt deserunt cum dicta!</p>
+          <p>
+            Kamirai Construtora is a Japanese-rooted construction company based in Maringá, Brazil, specializing in residential and commercial projects. The brand reflects its commitment to credibility, innovation, and sustainability while honoring its founders’ cultural heritage.
+          </p>
         </div>
         <div class="b-content cover-image">
           <img src="images/studio.jpeg" alt="">
