--- a/index.html
+++ b/index.html
@@ -8,106 +8,19 @@
   </head>
   <body>
 
-
-    <!-- Hero Section -->
-    <section class="blocker">
+    <section class="hero cover-image">
+      <img src="images/chi.jpg" alt="">
       <div class="container">
-        <div class="b-header">
-          <h1>Titulo com H1</h1>
-          <p>
-            Kamirai Construtora is a Japanese-rooted construction company based in Maringá, Brazil, specializing in residential and commercial projects. The brand reflects its commitment to credibility, innovation, and sustainability while honoring its founders’ cultural heritage.
-          </p>
-        </div>
-        <div class="b-content cover-image">
-          <img src="images/studio.jpeg" alt="">
-        </div> 
-      </div>
-    </section>
-
-    <section class="info">
-      <div class="container">
-        <div class="i-header">
-          <h2>About project</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime numquam cumque assumenda recusandae adipisci eaque suscipit fugit consequatur perspiciatis rem fugiat, facilis dolorum reprehenderit? Quibusdam, ex? Reiciendis maiores, tempore doloremque iure dignissimos debitis quibusdam quia nulla quae libero asperiores et modi porro odio! Quibusdam eveniet commodi ullam! Doloribus eligendi eaque libero vel maxime quia in.</p>
+        <div class="hero-content">
+          <h1>Hassle-free <img src="images/person.jpg" alt=""><img src="images/person.jpg" alt="">  expert for better businesses</h1>
+          <p>Lorem ipsum dolor sit amet consectetur. Facilisi ultricies sollicitudin lectus fames. A semper mattis donec pulvinar integer egestas.</p>
+          <a class="button" href="#">Get Started Now</a>
         </div>
 
-        <div class="i-tags">
-          <div class="item-tag">
-            <h3>Company</h3>
-            <p>Name of compy</p>
-          </div>
-          <div class="item-tag">
-            <h3>Company</h3>
-            <p>Name of compy</p>
-          </div>
-          <div class="item-tag">
-            <h3>Company</h3>
-            <p>Name of compy</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="projects">
-      <div class="container">
-        <div class="p-item cover-image">
-          <img src="images/studio.jpeg" alt="">
-        </div>
-        <div class="p-item cover-image">
-          <img src="images/studio.jpeg" alt="">
-        </div>
-        <div class="p-item cover-image">
-          <img src="images/studio.jpeg" alt="">
-        </div>
-        <div class="p-item cover-image">
-          <img src="images/studio.jpeg" alt="">
-        </div>
-      </div>
-    </section>
-
-    <section class="projects-similar">
-      <div class="container">
-        <div class="ps-content">
-          <h2>Projectos Similares</h2>
-          <div class="ps-grid">
-
-            <div class="work-item cover-image">
-              <img
-                src="images/studio.jpeg"
-                alt=""
-              />
-              <div class="item-content">
-                <h3>Gogerir</h3>
-                <p>Brand Identity</p>
-              </div>
-            </div>
-            <div class="work-item cover-image">
-              <img
-                src="images/studio.jpeg"
-                alt=""
-              />
-              <div class="item-content">
-                <h3>Gogerir</h3>
-                <p>Brand Identity</p>
-              </div>
-            </div>
-            <div class="work-item cover-image">
-              <img
-                src="images/studio.jpeg"
-                alt=""
-              />
-              <div class="item-content">
-                <h3>Gogerir</h3>
-                <p>Brand Identity</p>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
       </div>
 
     </section>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
