--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
   </head>
   <body>
 
+    <header>
+      <div class="container">
+        <a href="#">
+          <h1>Logo</h1>
+        </a>
+
+        <nav>
+          <div class="nav-links">
+            <li>
+              <li><a href="">Link</a></li>
+              <li><a href="">Link</a></li>
+              <li><a href="">Link</a></li>
+              <li><a href="">Link</a></li>
+            </li>
+          </div>
+        </nav>
+
+        <div class="acount">
+          <a href="">Login</a>
+          <a class="button" href="">register</a>
+        </div>
+      </div>
+    </header>
+
     <section class="hero cover-image">
       <img src="images/chi.jpg" alt="">
       <div class="container">
